# medical-imaging-ml-research-mcp

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
server/src/: config.py
server/src/ingestion/: semantic_scholar.py
server/src/mcp/: server.py
