[project]
name = "medical-imaging-ml-research-mcp"
version = "0.1.0"
description = "MCP server for medical imaging and ML research papers via Semantic Scholar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
medical-imaging-mcp = "main:main"
